# MCP-Servers

./: COMPARISON.md
1_mcp-weather-server/: DOCUMENTATION_INDEX.md  INSPECTOR_GUIDE.md  REFACTORING_SUMMARY.md  main.ts  package-lock.json  package.json
1_mcp-weather-server-ts/: .gitignore  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  test-tools.md  tsconfig.json
2_mcp-weather-server-py/: .gitignore  DOCUMENTATION_INDEX.md  INSPECTOR_GUIDE.md  INTEGRATION_GUIDE.md  MIGRATION_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  comprehensive_test.py  inspector_test.py  manual_inspector_test.py  pyproject.toml  server.py  test-tools.md  test_client.py  test_example.py
