[project]
name = "mcp-weather-server-py"
version = "1.0.0"
description = "MCP Weather Server with current weather and 7-day forecast tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.1.4",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]

[project.scripts]
mcp-weather = "server:mcp"

